<resources>
    <string name="app_name">Kanji Memo</string>

    <string name="main_title">漢字</string>
    <string name="main_play_button">PLAY</string>
    <string name="main_menu_style">Style</string>
    <string name="main_menu_options">Options</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_select_style">Select Style</string>

    <!-- select_style.xml -->
    <string name="select_style_title">Select Style</string>
    <string name="select_style_rb_kuro"> 黒  Kuro</string>
    <string name="select_style_rb_midori"> 緑  Midori</string>
    <string name="select_style_rb_murasaki"> 紫  Murasaki</string>

    <!-- play.xml -->
    <string name="play_menu_style">Style</string>
    <string name="play_menu_help">Help</string>
    <string name="play_menu_about">About KanjiMemo</string>
    <string name="play_menu_options">Options</string>
    <string name="title_activity_play">Play</string>
    <string name="playscreen_img_desc">Shows the result of current play</string>
    <string name="play_play_amount">1/10</string>
    <string name="play_percentage">0%</string>
    <string name="play_kanji">漢字</string>
    <string name="play_hiragana">Kunyomi</string>
    <string name="play_onyomi">Onyomi</string>
    <string name="play_first_option">First option</string>
    <string name="play_second_option">Second option</string>
    <string name="play_third_option">Third option</string>
    <string name="play_level">Level</string>
    <string name="play_global_title">Global</string>
    <string name="play_current_title">Current</string>
	<string name="title_activity_help">Help</string>

    <!-- help.xml -->
    <string name="help_title">Help</string>
    <string name="help_question1">How to play?</string>
    <string name="help_question2">Why I cannot advance to the next level?</string>
    <string name="help_question3">How much levels there?</string>

    <string name="help_answer1">KanjiMemo is an application that help you to memorize kanjis. The aim is to match the translation of the shown kanji, between three options.</string>
    <string name="help_answer2">To advance to the next level you must match every kanji of the level five times. If you fail some kanji, the match count for that kanji will reset to zero.</string>
    <string name="help_answer3">KanjiMemo has 162 levels with 12 kanjis each one.</string>

    <!-- about.xml -->
    <string name="about_title">About KanjiMemo</string>
    <string name="about_kanji">漢字</string>
    <string name="about_name">KanjiMemo by Ngenko Labs.</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_comments">Send us your comments to</string>
    <string name="about_email">ngenkolabs@gmail.com</string>
</resources>
