<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.ngenko.kanjimemo.Play">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings" android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/style" android:title="@string/play_menu_style" android:icon="@android:drawable/ic_menu_view"></item>
    <item android:id="@+id/help" android:title="@string/play_menu_help" android:icon="@android:drawable/ic_menu_view"></item>
    <item android:id="@+id/about" android:title="@string/play_menu_about" android:icon="@android:drawable/ic_menu_view"></item>
    <!--<item android:id="@+id/options" android:title="@string/play_menu_options" android:icon="@android:drawable/ic_menu_manage"></item>-->
</menu>
