<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/about_rl_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:background="@drawable/bg_kuro"
	tools:context="com.ngenko.kanjimemo.About">

	<TextView
		android:id="@+id/about_kanji"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:text="@string/about_kanji"
		android:textColor="#ffffff"
		android:textSize="80sp" />

	<TextView
		android:id="@+id/about_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/about_kanji"
		android:layout_marginTop="20dp"
		android:text="@string/about_name"
		android:textColor="#ffffff"
		android:textSize="20sp" />

	<TextView
		android:id="@+id/about_version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/about_name"
		android:layout_marginTop="10dp"
		android:text="@string/about_version"
		android:textColor="#ffffff"
		android:textSize="20sp" />


	<TextView
		android:id="@+id/about_comments"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/about_version"
		android:layout_marginTop="70dp"
		android:text="@string/about_comments"
		android:textColor="#ffffff"
		android:textSize="15sp" />
	<TextView
		android:id="@+id/about_email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/about_comments"
		android:layout_marginTop="10dp"
		android:text="@string/about_email"
		android:textColor="#ffffff"
		android:textSize="15sp" />
</RelativeLayout>
