<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_style_rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_kuro"
    tools:context="com.ngenko.kanjimemo.SelectStyle">


        <LinearLayout
            android:id="@+id/select_style_ll_radiobuttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/select_style_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <RadioButton
                    android:id="@+id/select_style_rb_kuro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:buttonTint="#ffffff"
                    android:text="@string/select_style_rb_kuro"
                    android:textSize="18sp"
                    android:textColor="#ffffff" />

                <RadioButton
                    android:id="@+id/select_style_rb_midori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:buttonTint="#ffffff"
                    android:text="@string/select_style_rb_midori"
                    android:textSize="18sp"
                    android:textColor="#ffffff" />

                <RadioButton
                    android:id="@+id/select_style_rb_murasaki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:buttonTint="#ffffff"
                    android:text="@string/select_style_rb_murasaki"
                    android:textSize="18sp"
                    android:textColor="#ffffff" />
            </RadioGroup>
        </LinearLayout>


</RelativeLayout>
