<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/play_rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_kuro"
    tools:context="com.ngenko.kanjimemo.Play">

    <RelativeLayout
        android:id="@+id/play_rl_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/play_tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:text="@string/play_level"
            android:textSize="15sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/play_rl_advance_global"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_rl_level"
        android:layout_marginTop="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="12">

        <TextView
            android:id="@+id/play_global_title"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_alignParentLeft="true"
            android:textColor="#ffffff"
            android:layout_marginRight="0dp"
            android:text="@string/play_global_title"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/play_rl_progress_global"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="12"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_toLeftOf="@+id/play_global_percentage"
            android:background="#80ffffff">

                <RelativeLayout
                    android:id="@+id/play_rl_global_percentage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="#09B50F"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">
                </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/play_global_percentage"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:textColor="#ffffff"
            android:layout_marginRight="0dp"
            android:text="0%"
            android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/play_rl_advance_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_rl_advance_global"
        android:layout_marginTop="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="12">

            <TextView
                android:id="@+id/play_current_title"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_alignParentLeft="true"
                android:textColor="#ffffff"
                android:layout_marginRight="0dp"
                android:text="@string/play_current_title"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/play_rl_progress_current"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="12"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_toLeftOf="@+id/play_current_percentage"
                android:background="#80ffffff">

                <RelativeLayout
                    android:id="@+id/play_rl_current_percentage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="#09B50F"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/play_rl_current_subtracted"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="#F72F2F"
                    android:layout_toRightOf="@+id/play_rl_current_percentage"
                    android:layout_alignParentTop="true">
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/play_current_percentage"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:textColor="#ffffff"
                android:layout_marginRight="0dp"
                android:text="0%"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/play_rl_kanji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_rl_advance_current"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/play_kanji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_kanji"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/play_rl_kana_titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play_kanji"
            android:layout_centerHorizontal="true">

            <RelativeLayout
                android:id="@+id/play_rl_kana_onyomi"
                android:layout_width="150dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/play_onyomi_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_onyomi"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#fff"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/play_onyomi_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/play_onyomi_title"
                    android:text="@string/play_onyomi"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#fff6ab" />

                <TextView
                    android:id="@+id/play_onyomi_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/play_onyomi_1"
                    android:text="@string/play_onyomi"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#fff6ab"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/play_onyomi_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/play_onyomi_2"
                    android:text="@string/play_onyomi"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#fff6ab"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/play_rl_kana_kunyomi"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/play_rl_kana_onyomi" >

                <TextView
                    android:id="@+id/play_kunyomi_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="50dp"
                    android:text="@string/play_hiragana"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#fff" />

                <TextView
                    android:id="@+id/play_kunyomi_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/play_kunyomi_title"
                    android:layout_marginLeft="50dp"
                    android:text="@string/play_hiragana"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#fff6ab"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/play_kunyomi_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/play_kunyomi_1"
                    android:layout_marginLeft="50dp"
                    android:text="@string/play_hiragana"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#fff6ab"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/play_kunyomi_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/play_kunyomi_2"
                    android:layout_marginLeft="50dp"
                    android:text="@string/play_hiragana"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#fff6ab"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/play_rl_kanji"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4" >

            <RelativeLayout
                android:id="@+id/play_rl_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/play_result_img"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_centerInParent="true"
                    android:src="@drawable/end_anim_transp" >
                </ImageView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/play_rl_first_alternative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/play_first_alternative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/play_first_option"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/play_rl_second_alternative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/play_second_alternative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/play_second_option"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/play_rl_third_alternative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/play_third_alternative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/play_third_option"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
